# accounting-app

./: .env.example  .gitignore  DEPLOY.md  Deploy Now.bat  Dockerfile  README.md  TESTING.md  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  reset_fly_data.ps1  setup_and_run.bat  start.sh
.github/workflows/: ci.yml  deploy.yml
app/: auth.py  config.py  csrf.py  db.py  deps.py  main.py
app/parsers/: bank_statement_generic.py  combined_ggr_xls.py  commission.py  financial_statement.py  ggr_excel.py  ggr_summary.py  invoice_upload.py  pcf_excel_parser.py  pcf_system_parser.py  ra260_payments.py  subsidiary_ledger.py  system_ledger.py  unionbank_xlsx.py
app/routers/: accounting.py  admin.py  analytics.py  api.py  auth.py  banking.py  closing.py  invoices.py  reconciliation.py  reporting.py  requests.py  requests_export.py  users.py
app/services/: bank_reconciliation.py  bank_system_reconciliation.py  classifier.py  closing_books.py  detailed_reconciliation.py  excel_styles.py  file_upload.py  financial_statement_service.py  historical_journal_learning.py  invoice_matching.py  ip_ratelimit.py  je_generator.py  log_service.py  open_items.py  payment_je_generator.py  ra260_ingest.py  receipt_ocr.py  reconciliation.py  request_workflow.py  supplier_matcher.py  tax_filing_status.py  tax_summary.py  totp_service.py
app/static/: manifest.json  style.css  sw.js
app/templates/: account_titles.html  analytics.html  audit_log.html  bank_reconcile_result.html  bank_reconcile_upload.html  bank_system_result.html  bank_system_upload.html  base.html  calendar.html  change_password.html  closing_detail.html  closing_upload.html  commission_dsp.html  commission_result.html  commission_upload.html  error.html  fs_detail.html  fs_list.html  ggr_summary_result.html  ggr_summary_upload.html  index.html  invoice_detail.html  invoices.html  login.html  (+31 more)
tests/: conftest.py  test_auth.py  test_bank_reconciliation_general.py  test_classifier_and_je.py  test_closing_fs_sl_analysis.py  test_debug_supplier.py  test_detailed_reconciliation.py  test_detailed_two_file_upload.py  test_ggr_summary.py  test_invoice_matching.py  test_new_features.py  test_password_policy.py  test_payment_je_generator.py  test_payment_requests_portal.py  test_ra260_payments.py  test_reconciliation.py  test_reconciliation_workspace_generic.py  test_routes.py  test_runtime_requirements.py  test_security.py  test_supplier_calendar_features.py  test_tax_summary.py  test_taxes_and_closing.py  test_unionbank_parser.py
